h1. Version 0.1.3
Oct 2011

* Updated dUsefulStuff to obtain access to a better error handling routine.
* Added KVC complient view attribute analysis.
* Adding assert macros.
* Adding better handling of NSInvocation exceptions due to known bug in NSInvocation.
* Added new in app display of results.
* Injected SIStepMapping into implementation classes storage area before call so class can access it. Mainly for testing.
* Revamped output of reporting in log.
* Updated to use dNodi (replacement for DXPath).
* More work on UI utils.
* More work on macros. Added assert macros.
* Added shutdown button to in app report to shutdown Simon.
* Added a UI based report for viewing results.
* Lots more doco.

h1. Version 0.1.1
July 2011

* Brought in dXPath to handle XPath queries against a UI.
* Fixed bug in stripping story: prefix.

h1. Version 0.1.0
July 2011

* Initial release of code. See Readme.