@@ -14,16 +14,8 @@
  */
 @interface SIAppBackpack : NSObject {
 	@private 
-	NSString * fileName;
 }
-/// @name Initialisation
-
-/**
- This init allows you to pass in a single story file rathe than having Simon scanning for all story files. This is most useful when debugging.
- 
- @param aFileName the .stories file you want to run.
- */
--(id) initWithStoryFile:(NSString *) aFileName;
+/// @name Tasks
 
 /**
  Acess to the static story runner.
